video css fix on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -42,5 +42,5 @@
 
 .videoStyle{
   margin: auto;
-  max-width: 100vw;
+  max-width: 95vw;
 }
